--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="98dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Your name" />
+        android:hint="@string/user_name" />
 
     <EditText
         android:id="@+id/userPhone"
@@ -26,15 +26,16 @@
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:inputType="phone"
-        android:text="Your phone number" />
+        android:hint="@string/user_phone" />
 
     <Button
         android:id="@+id/buttonLogin"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/userPhone"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="127dp"
-        android:text="Login" />
+
+        android:text="@string/login_button" />
 
 </RelativeLayout>
