--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context="com.example.android.sunshine.app.LoginActivity">
+    tools:context="com.cphbusiness.luke.androidschoolproject.LoginActivity">
 
     <EditText
         android:id="@+id/userName"
