--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,13 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    tools:context="com.cphbusiness.luke.androidschoolproject.WelcomeScreen">
+    tools:context="com.cphbusiness.luke.androidschoolproject.Splash">
 
 
 
     <ImageView
-        android:layout_width="345dp"
-        android:layout_height="340dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/WelcomeImage"
         android:layout_gravity="center"
         android:contentDescription="@string/ImageDesc"
