--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -33,8 +33,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
         android:src="@mipmap/ic_logo"
-        android:background="#ffffff" />
+        android:background="#ffffff"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" take a photo for your report."
+        android:id="@+id/tvDescribeActionTakePhoto"
+        android:textColor="#000000"
+        android:layout_marginTop="92dp"
+        android:layout_below="@+id/imageButton"
+        android:layout_alignStart="@+id/button" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/receivedUserName"
+        android:text="user name"
+        android:layout_alignTop="@+id/tvDescribeActionTakePhoto"
+        android:layout_toStartOf="@+id/tvDescribeActionTakePhoto" />
+
 </RelativeLayout>
