--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -3,57 +3,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.cphbusiness.luke.androidschoolproject.TakePhoto"
-    android:background="#ffffff">
+    tools:context="com.cphbusiness.luke.androidschoolproject.TakePhoto">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/take_a_photo"
         android:id="@+id/button"
-        android:layout_marginBottom="58dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="58dp"
+        android:text="@string/take_a_photo" />
 
     <TextView
+        android:id="@+id/tvCounter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#000000"
         android:text="Large Text"
-        android:id="@+id/textViewCounter"
-
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_above="@+id/receivedUserName"
+        android:layout_toEndOf="@+id/counter_description"
+        android:layout_marginBottom="66dp" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/imageButton"
-        android:src="@mipmap/ic_logo"
-        android:background="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:background="#ffffff"
+        android:src="@mipmap/ic_logo" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" take a photo for your report."
         android:id="@+id/tvDescribeActionTakePhoto"
-        android:textColor="#000000"
-        android:layout_marginTop="92dp"
-        android:layout_below="@+id/imageButton"
-        android:layout_alignStart="@+id/button" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/button"
+        android:layout_below="@+id/imageButton"
+        android:layout_marginTop="165dp"
+        android:text=" take a photo for your report."
+        android:textColor="#000000" />
+
+    <TextView
         android:id="@+id/receivedUserName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
         android:text="user name"
         android:layout_alignTop="@+id/tvDescribeActionTakePhoto"
         android:layout_toStartOf="@+id/tvDescribeActionTakePhoto" />
+
+    <TextView
+        android:id="@+id/counter_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textViewCounter"
+        android:layout_alignBottom="@+id/textViewCounter"
+        android:layout_alignParentStart="true"
+        android:textColor="#000000"
+        android:text="@string/counter_description" />
 
 </RelativeLayout>
