--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/LoginInformation"
@@ -26,9 +28,10 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:text="@string/InformationLogin"
+        android:text="@string/informationLogin"
+
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="13sp"
         android:layout_above="@+id/userPhone"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="56dp" />
@@ -60,7 +63,8 @@
 
     <Button
         android:id="@+id/buttonLogin"
-        android:layout_width="150dp"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/login_button"
         android:layout_alignParentBottom="true"
@@ -70,11 +74,12 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/CheckBox"
+        android:text="@string/checkBox"
         android:id="@+id/checkBox"
-        android:layout_below="@+id/userPhone"
-        android:layout_alignEnd="@+id/userPhone"
         android:checked="true"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="13sp"
+        android:layout_below="@+id/userPhone"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
