--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -1,19 +1,39 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context="com.cphbusiness.luke.androidschoolproject.LoginActivity">
+    tools:context="com.cphbusiness.luke.androidschoolproject.LoginActivity"
+    android:weightSum="10">
 
+
+    <Spinner
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="10dip"
+
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
+
+        android:id="@+id/spinner_addresses"
+        android:layout_above="@+id/description_textfield"
+        android:layout_centerHorizontal="true"
+        android:spinnerMode="dropdown" />
 
     <EditText
         android:id="@+id/description_textfield"
+        android:layout_weight="6"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
+
         android:gravity="top|left"
         android:inputType="textMultiLine"
         android:lines="5"
@@ -22,37 +42,16 @@
         android:layout_above="@+id/send_button"
         android:layout_centerHorizontal="true" />
 
+
     <Button
-        android:layout_height="wrap_content"
-        android:layout_width="200dp"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        android:layout_width="150dp"
+
+        android:layout_gravity="center"
         android:text="@string/send_button"
         android:id="@+id/send_button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="43dp" />
-
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner_addresses"
-        android:layout_above="@+id/description_textfield"
-        android:layout_centerHorizontal="true"
-        android:spinnerMode="dropdown" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Coordinates (test): "
-        android:id="@+id/textView"
-        android:layout_above="@+id/spinner_addresses"
-        android:layout_alignStart="@+id/send_button"
-        android:layout_marginBottom="66dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/testTextView"
-        android:layout_alignTop="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
-</RelativeLayout>
+        />
+    </LinearLayout>
