--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -12,12 +12,13 @@
 
     <Button
         android:id="@+id/button"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="43dp"
+        android:text="@string/take_a_photo"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="58dp"
-        android:text="@string/take_a_photo" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/tvCounter"
@@ -43,11 +44,11 @@
         android:id="@+id/tvDescribeActionTakePhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/button"
-        android:layout_below="@+id/imageButton"
-        android:layout_marginTop="165dp"
+        android:gravity="center"
         android:text=" take a photo for your report."
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:layout_centerVertical="true"
+        android:layout_alignEnd="@+id/button" />
 
     <TextView
         android:id="@+id/receivedUserName"
@@ -62,10 +63,9 @@
         android:id="@+id/counter_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textViewCounter"
-        android:layout_alignBottom="@+id/textViewCounter"
-        android:layout_alignParentStart="true"
         android:textColor="#000000"
-        android:text="@string/counter_description" />
+        android:text="@string/counter_description"
+        android:layout_alignTop="@+id/imageButton"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
