--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -27,9 +27,9 @@
         android:textColor="#000000"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_above="@+id/receivedUserName"
-        android:layout_toEndOf="@+id/counter_description"
-        android:layout_marginBottom="66dp" />
+        android:layout_below="@+id/counter_description"
+        android:layout_alignEnd="@+id/counter_description"
+        android:layout_marginEnd="27dp" />
 
     <ImageButton
         android:id="@+id/imageButton"
